Implemented basic functionality for Studio1

--- a/index.html
+++ b/index.html
@@ -5,10 +5,29 @@
 <meta charset="UTF-8">
 <title>Yet Another To-Do List</title>
 <script src="index.js" type="module"></script>
+
+
+
 </head>
 <body>
 	<div id="app">
+	<ma-data src="local:tasks" v-model="tasks" autosave></ma-data>
+	<h1>{{count(get(tasks, "done"))}} done of {{tasks.length}} total</h1>
+
+		<ul>
+        <li v-for="(task, index) in tasks">
+            <input type="checkbox" v-model="task.done">
+            <input type="text" v-model="task.title">
+            <button @click="deleteItem(index)">x</button>
+        </li>
+
+    </ul>
+		
+		<button @click="addItem()">Add item</button>
+		<button @click="clearCompleted()">Clear completed</button>
+		
 
 	</div>
+	
 </body>
 </html>
